// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stamp color blue sets text and icon color 1`] = `
<div
  className="gaLKEg"
  color="blue"
  fontSize={0}
/>
`;

exports[`Stamp color gray sets text and icon color 1`] = `
<div
  className="lccHcc"
  color="gray"
  fontSize={0}
/>
`;

exports[`Stamp color green sets text and icon color 1`] = `
<div
  className="kPLDVL"
  color="green"
  fontSize={0}
/>
`;

exports[`Stamp color orange sets text and icon color 1`] = `
<div
  className="eyjgFU"
  color="orange"
  fontSize={0}
/>
`;

exports[`Stamp color purple sets text and icon color 1`] = `
<div
  className="hpPeVv"
  color="purple"
  fontSize={0}
/>
`;

exports[`Stamp color red sets text and icon color 1`] = `
<div
  className="dBUueP"
  color="red"
  fontSize={0}
/>
`;

exports[`Stamp renders 1`] = `
<div
  className="lccHcc"
  color="gray"
  fontSize={0}
/>
`;
